WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45333
Movies with track or movie matrices don't display in <video> elements (Safari 5/Windows)
https://bugs.webkit.org/show_bug.cgi?id=45333
Summary
Movies with track or movie matrices don't display in <video> elements (Safari...
Jer Noble
Reported
2010-09-07 16:08:35 PDT
Movies shot with the iPhone 4 front camera don't display in Safari 5.
Attachments
Video-rotation
(23.51 KB, patch)
2010-09-07 17:31 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Video-rotation
(23.58 KB, patch)
2010-09-09 13:50 PDT
,
Jer Noble
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2010-09-07 16:08:49 PDT
<
rdar://problem/8133126
>
Jer Noble
Comment 2
2010-09-07 17:31:04 PDT
Created
attachment 66798
[details]
Video-rotation
WebKit Review Bot
Comment 3
2010-09-07 17:32:39 PDT
Attachment 66798
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebCore/ChangeLog:7: Line contains tab character. [whitespace/tab] [5] WebCore/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] WebCore/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] WebCore/ChangeLog:10: Line contains tab character. [whitespace/tab] [5] WebCore/ChangeLog:11: Line contains tab character. [whitespace/tab] [5] WebCore/ChangeLog:17: Line contains tab character. [whitespace/tab] [5] WebCore/ChangeLog:21: Line contains tab character. [whitespace/tab] [5] WebCore/ChangeLog:23: Line contains tab character. [whitespace/tab] [5] WebCore/ChangeLog:25: Line contains tab character. [whitespace/tab] [5] WebCore/ChangeLog:27: Line contains tab character. [whitespace/tab] [5] WebCore/platform/graphics/win/QTTrack.h:35: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 11 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jer Noble
Comment 4
2010-09-09 13:50:57 PDT
Created
attachment 67090
[details]
Video-rotation Fixed those blasted tabs.
WebKit Review Bot
Comment 5
2010-09-09 13:54:08 PDT
Attachment 67090
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebCore/platform/graphics/win/QTTrack.h:35: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 6
2010-09-09 14:13:30 PDT
Comment on
attachment 67090
[details]
Video-rotation I think you should initialize m_movieTransform in the constructor. r=me.
Jer Noble
Comment 7
2010-09-10 23:26:56 PDT
Committed
r67285
: <
http://trac.webkit.org/changeset/67285
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug