2010-09-10  Jer Noble  <jer.noble@apple.com>

Reviewed by Simon Fraser.

        Movies with track or movie matrices don't display in <video> elements (Safari 5/Windows)
        https://bugs.webkit.org/show_bug.cgi?id=45333

        The rootChild layer must be set as flipped, otherwise transformed movies will appear
        incorrectly rotated.

        * FullscreenVideoController.cpp:
        (FullscreenVideoController::enterFullscreen):
2010-09-10  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        <rdar://problem/8414282> Can’t dynamically change first-letter to/from floating

        Test: fast/dynamic/first-letter-display-change.html

        * rendering/RenderBlock.cpp:
        (WebCore::styleForFirstLetter): Factored this helper function out.
        (WebCore::RenderBlock::updateFirstLetter): Renamed variables so that the
        “update style” and “create new” branches use the same terminology. In the
        update case, if the style change requires a new renderer, handle it.
        * rendering/RenderTextFragment.h:
        (WebCore::toRenderTextFragment): Added.


Canonical link: https://commits.webkit.org/58017@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67285 268f45cc-cd09-0410-ab3c-d52691b4dbfc