WebCore/platform/graphics/win/MediaPlayerPrivateQuickTimeVisualContext.cpp
@@ -47,6 +47,7 @@
 #include "Timer.h"
 #include <AssertMacros.h>
 #include <CoreGraphics/CGContext.h>
+#include <CoreGraphics/CGFloat.h>
 #include <Wininet.h>
 #include <wtf/CurrentTime.h>
 #include <wtf/HashSet.h>
@@ -97,6 +98,39 @@ public:
 private:
     MediaPlayerPrivateQuickTimeVisualContext* m_parent;
 };
+
+class MediaPlayerPrivateQuickTimeVisualContext::LayoutClient : public WKCACFLayerLayoutClient {
+public:
+    LayoutClient(MediaPlayerPrivateQuickTimeVisualContext* parent) : m_parent(parent) {}
+    virtual void layoutSublayersOfLayer(WKCACFLayer*);
+private:
+    MediaPlayerPrivateQuickTimeVisualContext* m_parent;
+};
+
+void MediaPlayerPrivateQuickTimeVisualContext::LayoutClient::layoutSublayersOfLayer(WKCACFLayer* layer)
+{
+    ASSERT(m_parent);
+    ASSERT(m_parent->m_transformLayer->platformLayer() == layer);
+
+    CGSize parentSize = layer->bounds().size;
+    CGSize naturalSize = m_parent->naturalSize();
+
+    // Calculate the ratio of these two sizes and use that ratio to scale the qtVideoLayer:
+    CGSize ratio = CGSizeMake(parentSize.width / naturalSize.width, parentSize.height / naturalSize.height);
+
+    int videoWidth = 0;
+    int videoHeight = 0;
+    m_parent->m_movie->getNaturalSize(videoWidth, videoHeight);
+    CGRect videoBounds = CGRectMake(0, 0, videoWidth * ratio.width, videoHeight * ratio.height);
+    CGPoint videoAnchor = m_parent->m_qtVideoLayer->anchorPoint();
+
+    // Calculate the new position based on the parent's size:
+    CGPoint position = CGPointMake(parentSize.width * 0.5 - videoBounds.size.width * (0.5 - videoAnchor.x),
+        parentSize.height * 0.5 - videoBounds.size.height * (0.5 - videoAnchor.y)); 
+
+    m_parent->m_qtVideoLayer->setBounds(videoBounds);
+    m_parent->m_qtVideoLayer->setPosition(position);
+}
 #endif
 
 class MediaPlayerPrivateQuickTimeVisualContext::VisualContextClient : public QTMovieVisualContextClient {
@@ -137,8 +171,10 @@ MediaPlayerPrivateQuickTimeVisualContext::MediaPlayerPrivateQuickTimeVisualConte
     , m_movieClient(new MediaPlayerPrivateQuickTimeVisualContext::MovieClient(this))
 #if USE(ACCELERATED_COMPOSITING)
     , m_layerClient(new MediaPlayerPrivateQuickTimeVisualContext::LayerClient(this))
+    , m_layoutClient(new MediaPlayerPrivateQuickTimeVisualContext::LayoutClient(this))
 #endif
     , m_visualContextClient(new MediaPlayerPrivateQuickTimeVisualContext::VisualContextClient(this))
+    , m_movieTransform(CGAffineTransformIdentity)
 {
 }
 
@@ -169,7 +205,7 @@ PlatformMedia MediaPlayerPrivateQuickTimeVisualContext::platformMedia() const
 #if USE(ACCELERATED_COMPOSITING)
 PlatformLayer* MediaPlayerPrivateQuickTimeVisualContext::platformLayer() const
 {
-    return m_qtVideoLayer ? m_qtVideoLayer->platformLayer() : 0;
+    return m_transformLayer ? m_transformLayer->platformLayer() : 0;
 }
 #endif
 
@@ -404,7 +440,9 @@ IntSize MediaPlayerPrivateQuickTimeVisualContext::naturalSize() const
     int width;
     int height;
     m_movie->getNaturalSize(width, height);
-    return IntSize(width, height);
+    CGSize originalSize = {width, height};
+    CGSize transformedSize = CGSizeApplyAffineTransform(originalSize, m_movieTransform);
+    return IntSize(CGFAbs(transformedSize.width), CGFAbs(transformedSize.height));
 }
 
 bool MediaPlayerPrivateQuickTimeVisualContext::hasVideo() const
@@ -763,7 +801,7 @@ void MediaPlayerPrivateQuickTimeVisualContext::retrieveCurrentImage()
         if (!buffer.pixelBufferRef())
             return;
 
-        WKCACFLayer* layer = static_cast<WKCACFLayer*>(m_qtVideoLayer->platformLayer());
+        WKCACFLayer* layer = m_qtVideoLayer.get();
 
         if (!buffer.lockBaseAddress()) {
             if (requiredDllsAvailable()) {
@@ -1017,6 +1055,38 @@ bool MediaPlayerPrivateQuickTimeVisualContext::hasSetUpVideoRendering() const
 #endif
 }
 
+void MediaPlayerPrivateQuickTimeVisualContext::retrieveAndResetMovieTransform()
+{
+    // First things first, reset the total movie transform so that
+    // we can bail out early:
+    m_movieTransform = CGAffineTransformIdentity;
+
+    if (!m_movie || !m_movie->hasVideo())
+        return;
+
+    // This trick will only work on movies with a single video track,
+    // so bail out early if the video contains more than one (or zero)
+    // video tracks.
+    QTTrackArray videoTracks = m_movie->videoTracks();
+    if (videoTracks.size() != 1)
+        return;
+
+    QTTrack* track = videoTracks[0].get();
+    ASSERT(track);
+
+    CGAffineTransform movieTransform = m_movie->getTransform();
+    if (!CGAffineTransformEqualToTransform(movieTransform, CGAffineTransformIdentity))
+        m_movie->resetTransform();
+
+    CGAffineTransform trackTransform = track->getTransform();
+    if (!CGAffineTransformEqualToTransform(trackTransform, CGAffineTransformIdentity))
+        track->resetTransform();
+
+    // Multiply the two transforms together, taking care to 
+    // do so in the correct order, track * movie = final:
+    m_movieTransform = CGAffineTransformConcat(trackTransform, movieTransform);
+}
+
 void MediaPlayerPrivateQuickTimeVisualContext::createLayerForMovie()
 {
 #if USE(ACCELERATED_COMPOSITING)
@@ -1028,17 +1098,35 @@ void MediaPlayerPrivateQuickTimeVisualContext::createLayerForMovie()
     // Create a GraphicsLayer that won't be inserted directly into the render tree, but will used 
     // as a wrapper for a WKCACFLayer which gets inserted as the content layer of the video 
     // renderer's GraphicsLayer.
-    m_qtVideoLayer.set(new GraphicsLayerCACF(m_layerClient.get()));
-    if (!m_qtVideoLayer)
+    m_transformLayer.set(new GraphicsLayerCACF(m_layerClient.get()));
+    if (!m_transformLayer)
         return;
 
     // Mark the layer as drawing itself, anchored in the top left, and bottom-up.
-    m_qtVideoLayer->setDrawsContent(true);
-    m_qtVideoLayer->setAnchorPoint(FloatPoint3D());
-    m_qtVideoLayer->setContentsOrientation(GraphicsLayer::CompositingCoordinatesBottomUp);
+    m_transformLayer->setDrawsContent(false);
+    m_transformLayer->setAnchorPoint(FloatPoint3D());
+    m_transformLayer->setContentsOrientation(GraphicsLayer::CompositingCoordinatesBottomUp);
+    m_transformLayer->platformLayer()->setLayoutClient(m_layoutClient.get());
+
+    m_qtVideoLayer = WKCACFLayer::create(WKCACFLayer::Layer);
+    if (!m_qtVideoLayer)
+        return;
+
+    if (CGAffineTransformEqualToTransform(m_movieTransform, CGAffineTransformIdentity))
+        retrieveAndResetMovieTransform();
+    CGAffineTransform t = m_movieTransform;
+
+    // Remove the translation portion of the transform, since we will always rotate about
+    // the layer's center point.  In our limited use-case (a single video track), this is
+    // safe:
+    t.tx = t.ty = 0;
+    m_qtVideoLayer->setTransform(CATransform3DMakeAffineTransform(t));
+
 #ifndef NDEBUG
     m_qtVideoLayer->setName("Video layer");
 #endif
+    m_transformLayer->platformLayer()->addSublayer(m_qtVideoLayer.get());
+    m_transformLayer->platformLayer()->setNeedsLayout();
     // The layer will get hooked up via RenderLayerBacking::updateGraphicsLayerConfiguration().
 #endif
 
@@ -1052,8 +1140,13 @@ void MediaPlayerPrivateQuickTimeVisualContext::createLayerForMovie()
 void MediaPlayerPrivateQuickTimeVisualContext::destroyLayerForMovie()
 {
 #if USE(ACCELERATED_COMPOSITING)
-    if (m_qtVideoLayer)
+    if (m_qtVideoLayer) {
+        m_qtVideoLayer->removeFromSuperlayer();
         m_qtVideoLayer = 0;
+    }
+
+    if (m_transformLayer)
+        m_transformLayer = 0;
 
     if (m_imageQueue)
         m_imageQueue = 0;
