WebCore/platform/graphics/win/WKCACFLayer.cpp
@@ -355,6 +355,9 @@ void WKCACFLayer::setBounds(const CGRect& rect)
 
     if (m_needsDisplayOnBoundsChange)
         setNeedsDisplay();
+
+    if (m_layoutClient)
+        setNeedsLayout();
 }
 
 void WKCACFLayer::setFrame(const CGRect& rect)
@@ -368,6 +371,9 @@ void WKCACFLayer::setFrame(const CGRect& rect)
 
     if (m_needsDisplayOnBoundsChange && !CGSizeEqualToSize(rect.size, oldFrame.size))
         setNeedsDisplay();
+
+    if (m_layoutClient)
+        setNeedsLayout();
 }
 
 void WKCACFLayer::setContentsGravity(ContentsGravityType type)
